[package]
name = "adventofcode2020"
version = "0.1.0"
authors = ["Tristan <tristan.king@gmail.com>"]
edition = "2018"

[dependencies]


[lib]
path = "src/common.rs"

[[bin]]
name = "day_01"
path = "src/day_01.rs"

[[bin]]
name = "day_02"
path = "src/day_02.rs"

[[bin]]
name = "day_03"
path = "src/day_03.rs"

[[bin]]
name = "day_04"
path = "src/day_04.rs"

[[bin]]
name = "day_05"
path = "src/day_05.rs"
